--- a/src/NominaSoft.UI/Views/ProcesarPagos/ProcesarPagos.cshtml
+++ b/src/NominaSoft.UI/Views/ProcesarPagos/ProcesarPagos.cshtml
@@ -1,6 +1,9 @@
 ﻿@model ProcesarPagosDTO
 @{
     ViewData["Title"] = "Procesar pagos";
+    Layout = "~/Views/Shared/_MasterView.cshtml";
+
+
 }
 
 <div class="content-wrapper">
